feat: flyway migrations and controllers for models

--- a/apps/auth-server/src/main/resources/application.properties
+++ b/apps/auth-server/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=auth-server
+debug=true
+# database
+spring.datasource.url=jdbc:postgresql://localhost:5432/imperium-auth-server-db
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.jpa.hibernate.ddl-auto=validate
+
+#flyaway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
+
+#jwt
+security.jwt.security-key=secret-jwt
+security.jwt.expiration-key=3600000
